[gd_scene load_steps=11 format=2]

[ext_resource path="res://vehicles/vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://vehicles/meshes/vehicles_car_cop.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://sounds/cop_siren.wav" type="AudioStream" id=3]
[ext_resource path="res://vehicles/cop_car.gd" type="Script" id=4]
[ext_resource path="res://effects/textures/siren.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=3]
material = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_color = Color( 0, 0, 1, 1 )
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.610521, 1.09696 )

[node name="Vehicle" instance=ExtResource( 1 )]
script = ExtResource( 4 )
level = 1
can_drop = true

[node name="Mesh" parent="Origin" index="0"]
mesh = ExtResource( 2 )

[node name="RedLight" type="MeshInstance" parent="Origin" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.45, 0.2 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="BlueLight" type="MeshInstance" parent="Origin" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0.45, 0.2 )
visible = false
mesh = SubResource( 6 )
skeleton = NodePath("../..")

[node name="CollisionShape" parent="Hitbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.106271 )
shape = SubResource( 1 )

[node name="SirenTimer" type="Timer" parent="." index="7"]
wait_time = 0.25

[node name="SirenSound" type="AudioStreamPlayer3D" parent="." index="8"]
stream = ExtResource( 3 )
unit_size = 25.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0

[connection signal="timeout" from="SirenTimer" to="." method="switch_siren"]
